# fsdl_project

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.dvc/: config
app/deployment/: docker-compose.yml
app/deployment/grafana/provisioning/datasources/: datasource.yml
app/deployment/prometheus/: prometheus.sh  prometheus.yml
app/deployment/serving/: Dockerfile  requirements.txt
app/deployment/serving/handlers/: handler.py
app/experiments/mlflow/: docker-compose.yml
app/streamlit/: app.py
models/wav2vec_kws/: best.ckpt.dvc
resources/data/SpeechCommandsSplit/test/backward/: .gitignore  03401e93_nohash_0.wav.dvc  03401e93_nohash_1.wav.dvc  0c540988_nohash_0.wav.dvc  0cb74144_nohash_0.wav.dvc  0cb74144_nohash_1.wav.dvc  0cb74144_nohash_2.wav.dvc  0cb74144_nohash_3.wav.dvc  189cbabe_nohash_0.wav.dvc  189cbabe_nohash_1.wav.dvc  189cbabe_nohash_2.wav.dvc  189cbabe_nohash_3.wav.dvc  189cbabe_nohash_4.wav.dvc  18f8afd5_nohash_0.wav.dvc  18f8afd5_nohash_1.wav.dvc  18f8afd5_nohash_2.wav.dvc  18f8afd5_nohash_3.wav.dvc  18f8afd5_nohash_4.wav.dvc  1acc97de_nohash_0.wav.dvc  1acc97de_nohash_1.wav.dvc  1acc97de_nohash_2.wav.dvc  1acc97de_nohash_3.wav.dvc  2005ca25_nohash_0.wav.dvc  3659fc1c_nohash_0.wav.dvc  3b4f8f24_nohash_0.wav.dvc  3b4f8f24_nohash_1.wav.dvc  3b4f8f24_nohash_2.wav.dvc  3b4f8f24_nohash_3.wav.dvc  3b4f8f24_nohash_4.wav.dvc  (+137 more)
resources/models/pretrained/: .gitignore  wav2vec_small.pt.dvc
src/datasets/: wav2vec_kws.py  wav2vec_kws_simple.py
src/models/: wav2keyword.py
src/scripts/: predict.py  train_wav2vec_kws.py  tune_wav2vec_kws.py
(+634 files in other folders)
